Add docker file to run bot

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tofu",
+  "name": "patisserie",
   "version": "0.1.0",
-  "description": "Improving gameplay for KingsOfChaos",
-  "main": "luxbot.user.js",
+  "description": "A simple e7 discord bot",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
