--- a/package.json
+++ b/package.json
@@ -14,37 +14,14 @@
   "license": "UNLICENSED",
   "sideEffects": false,
   "devDependencies": {
-    "almond": "~0.2.6",
-    "array-flatten": "^2.1.2",
-    "async": "^2.6.3",
-    "base64-inline-loader": "^1.1.1",
-    "browserify-zlib": "^0.2.0",
-    "debug": "^2.6.9",
-    "fastparse": "^1.1.2",
-    "grunt": "^1.2.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-jshint": "^2.1.0",
-    "grunt-contrib-requirejs": "^1.0.0",
-    "grunt-webpack": "^3.1.3",
-    "handlebars": "^4.7.6",
-    "handlebars-loader": "^1.7.1",
-    "jquery-slim": "^3.0.0",
-    "js-beautify": "~1.4.2",
-    "mathjs": "^10.4.1",
-    "md5": "^2.3.0",
-    "mime": "^1.6.0",
-    "raw-loader": "^0.5.1",
-    "simple-json-db": "^2.0.0",
-    "util-deprecate": "^1.0.2",
-    "webpack": "^4.43.0",
-    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "mathjs": "^10.4.1",
     "axios": "^0.26.1",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
-    "grunt-cli": "^1.3.2"
+    "simple-json-db": "^2.0.0"
   },
   "directories": {
     "doc": "docs"
