--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "license": "UNLICENSED",
   "sideEffects": false,
   "devDependencies": {
+    "csv-reader": "^1.0.8"
   },
   "dependencies": {
-    "mathjs": "^10.4.1",
     "axios": "^0.26.1",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
+    "mathjs": "^10.4.1",
     "simple-json-db": "^2.0.0"
   },
   "directories": {
