--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,11 @@ services:
       - ./.env:/usr/src/app/.env
       - ./db:/usr/src/app/db
     restart: unless-stopped
-
+  my-redis:
+    image: redis:6.2-alpine
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning #--requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+    volumes: 
+      - db/redis:/data
