--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "mathjs": "^10.4.1",
+    "redis": "^4.6.10",
     "simple-json-db": "^2.0.0"
   },
   "directories": {
