--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple e7 discord bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:express": "node ./index.js",
+    "start": "./src/start.sh"
   },
   "repository": {
     "type": "git",
