--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "license": "UNLICENSED",
   "sideEffects": false,
   "devDependencies": {
-    "csv-reader": "^1.0.8"
+    "csv-reader": "^1.0.8",
+    "typescript": "^5.3.3",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "axios": "^0.26.1",
@@ -24,8 +26,10 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "mathjs": "^10.4.1",
+    "pubsub-js": "^1.9.4",
     "redis": "^4.6.10",
-    "simple-json-db": "^2.0.0"
+    "simple-json-db": "^2.0.0",
+    "ts-torn-api": "^0.1.58"
   },
   "directories": {
     "doc": "docs"
