--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@types/luxon": "^3.4.2",
+    "@types/pino": "^7.0.5",
     "axios": "^0.26.1",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
@@ -30,6 +31,7 @@
     "luxon": "^3.4.4",
     "mathjs": "^10.4.1",
     "pg": "^8.11.5",
+    "pino": "^9.0.0",
     "pubsub-js": "^1.9.4",
     "redis": "^4.6.10",
     "simple-json-db": "^2.0.0",
