--- a/src/package.json
+++ b/src/package.json
@@ -19,13 +19,10 @@
     "@types/pg": "^8.11.4",
     "csv-reader": "^1.0.8",
     "ollama": "^0.5.12",
-    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2",
-    "webpack-cli": "^5.1.4"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@types/axios": "^0.14.4",
     "@types/luxon": "^3.4.2",
     "@types/pino": "^7.0.5",
     "axios": "^0.26.1",
