--- a/src/package.json
+++ b/src/package.json
@@ -23,9 +23,11 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@huggingface/transformers": "^3.5.1",
+    "@tavily/core": "^0.3.1",
     "@types/luxon": "^3.4.2",
     "@types/pino": "^7.0.5",
-    "axios": "^0.26.1",
+    "axios": "^1.9.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
