--- a/src/package.json
+++ b/src/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@huggingface/transformers": "^3.5.1",
+    "@jupyterlab/services": "^7.4.2",
     "@tavily/core": "^0.3.1",
     "@types/luxon": "^3.4.2",
     "@types/pino": "^7.0.5",
