--- a/src/package.json
+++ b/src/package.json
@@ -39,7 +39,8 @@
     "pubsub-js": "^1.9.4",
     "redis": "^4.6.10",
     "simple-json-db": "^2.0.0",
-    "ts-torn-api": "^0.1.61"
+    "ts-torn-api": "^0.1.61",
+    "yaml": "^2.7.1"
   },
   "directories": {
     "doc": "docs"
