--- a/src/modules/ai/prompts/smolagents_code_agent.yml
+++ b/src/modules/ai/prompts/smolagents_code_agent.yml
@@ -143,30 +143,30 @@ system_prompt: |-
 
   Above example were using notional tools that might not exist for you. On top of performing computations in the Python code snippets that you create, you only have access to these tools, behaving like regular python functions:
   ```python
-  {%- for tool in tools.values() %}
+  {% for tool in tools.values() %}
   def {{ tool.name }}({% for arg_name, arg_info in tool.inputs.items() %}{{ arg_name }}: {{ arg_info.type }}{% if not loop.last %}, {% endif %}{% endfor %}) -> {{tool.output_type}}:
       """{{ tool.description }}
 
       Args:
-      {%- for arg_name, arg_info in tool.inputs.items() %}
+      {% for arg_name, arg_info in tool.inputs.items() %}
           {{ arg_name }}: {{ arg_info.description }}
-      {%- endfor %}
+      {% endfor %}
       """
   {% endfor %}
   ```
 
-  {%- if managed_agents and managed_agents.values() | list %}
+  {% if managed_agents and managed_agents.values() | list %}
   You can also give tasks to team members.
   Calling a team member works the same as for calling a tool: simply, the only argument you can give in the call is 'task'.
   Given that this team member is a real human, you should be very verbose in your task, it should be a long string providing informations as detailed as necessary.
   Here is a list of the team members that you can call:
   ```python
-  {%- for agent in managed_agents.values() %}
+  {% for agent in managed_agents.values() %}
   def {{ agent.name }}("Your query goes here.") -> str:
       """{{ agent.description }}"""
   {% endfor %}
   ```
-  {%- endif %}
+  {% endif %}
 
   Here are the rules you should always follow to solve your task:
   1. Always provide a 'Thought:' sequence, and a 'Code:\n```py' sequence ending with '```<end_code>' sequence, else you will fail.
@@ -209,30 +209,30 @@ planning:
 
     You can leverage these tools, behaving like regular python functions:
     ```python
-    {%- for tool in tools.values() %}
+    {% for tool in tools.values() %}
     def {{ tool.name }}({% for arg_name, arg_info in tool.inputs.items() %}{{ arg_name }}: {{ arg_info.type }}{% if not loop.last %}, {% endif %}{% endfor %}) -> {{tool.output_type}}:
         """{{ tool.description }}
 
         Args:
-        {%- for arg_name, arg_info in tool.inputs.items() %}
+        {% for arg_name, arg_info in tool.inputs.items() %}
             {{ arg_name }}: {{ arg_info.description }}
-        {%- endfor %}
+        {% endfor %}
         """
     {% endfor %}
     ```
 
-    {%- if managed_agents and managed_agents.values() | list %}
+    {% if managed_agents and managed_agents.values() | list %}
     You can also give tasks to team members.
     Calling a team member works the same as for calling a tool: simply, the only argument you can give in the call is 'task'.
     Given that this team member is a real human, you should be very verbose in your task, it should be a long string providing informations as detailed as necessary.
     Here is a list of the team members that you can call:
     ```python
-    {%- for agent in managed_agents.values() %}
+    {% for agent in managed_agents.values() %}
     def {{ agent.name }}("Your query goes here.") -> str:
         """{{ agent.description }}"""
     {% endfor %}
     ```
-    {%- endif %}
+    {% endif %}
 
     ---
     Now begin! Here is your task:
@@ -272,29 +272,29 @@ planning:
 
     You can leverage these tools, behaving like regular python functions:
     ```python
-    {%- for tool in tools.values() %}
+    {% for tool in tools.values() %}
     def {{ tool.name }}({% for arg_name, arg_info in tool.inputs.items() %}{{ arg_name }}: {{ arg_info.type }}{% if not loop.last %}, {% endif %}{% endfor %}) -> {{tool.output_type}}:
         """{{ tool.description }}
 
         Args:
-        {%- for arg_name, arg_info in tool.inputs.items() %}
+        {% for arg_name, arg_info in tool.inputs.items() %}
             {{ arg_name }}: {{ arg_info.description }}
-        {%- endfor %}"""
+        {% endfor %}"""
     {% endfor %}
     ```
 
-    {%- if managed_agents and managed_agents.values() | list %}
+    {% if managed_agents and managed_agents.values() | list %}
     You can also give tasks to team members.
     Calling a team member works the same as for calling a tool: simply, the only argument you can give in the call is 'task'.
     Given that this team member is a real human, you should be very verbose in your task, it should be a long string providing informations as detailed as necessary.
     Here is a list of the team members that you can call:
     ```python
-    {%- for agent in managed_agents.values() %}
+    {% for agent in managed_agents.values() %}
     def {{ agent.name }}("Your query goes here.") -> str:
         """{{ agent.description }}"""
     {% endfor %}
     ```
-    {%- endif %}
+    {% endif %}
 
     Now write your updated facts survey below, then your new plan.
 managed_agent:
