--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
   "license": "UNLICENSED",
   "sideEffects": false,
   "devDependencies": {
+    "@types/nunjucks": "^3.2.6",
     "@types/pg": "^8.11.4",
     "csv-reader": "^1.0.8",
     "ollama": "^0.5.12",
@@ -34,6 +35,7 @@
     "ejs": "^3.1.6",
     "luxon": "^3.4.4",
     "mathjs": "^10.4.1",
+    "nunjucks": "^3.2.4",
     "pg": "^8.11.5",
     "pino": "^9.0.0",
     "pubsub-js": "^1.9.4",
