Add support for OpenAI as llm provider

--- a/src/package.json
+++ b/src/package.json
@@ -36,6 +36,7 @@
     "luxon": "^3.4.4",
     "mathjs": "^10.4.1",
     "nunjucks": "^3.2.4",
+    "openai": "^4.103.0",
     "pg": "^8.11.5",
     "pino": "^9.0.0",
     "pubsub-js": "^1.9.4",
